--- a/_rawdog/pictures/config
+++ b/_rawdog/pictures/config
@@ -252,6 +252,7 @@ changeconfig true
 # to use them.)
 
 feed 1h http://api.twitter.com/1/statuses/user_timeline.rss?screen_name=nytgraphics
+feed 1h http://api.twitter.com/1/statuses/user_timeline.rss?screen_name=NYTimesVisual
 feed 6h http://xkcd.com/atom.xml
 feed 6h http://www.economist.com/blogs/graphicdetail/index.xml
 feed 6h http://stevemccurry.wordpress.com/feed/
