Moved some of the news rivers to a private directory
I'm not entirely sure about the copyright aspects of republishing rss feeds,
so I'll move the stuff that's just for my own entertainment to a password
protected directory for now.

--- a/_rawdog/music/config
+++ b/_rawdog/music/config
@@ -88,7 +88,7 @@ datetimeformat %H:%M, %A, %d %B
 # You can define additional strings using "define" in this config file; for
 # example, if you say "define myname Adam Sampson", then "__myname__" will be
 # replaced by "Adam Sampson" in the output.
-template /home/gray/Desktop/gray.clhn.co/_rawdog/template.html
+template /home/gray/Desktop/gray.clhn.co/_rawdog/template_private.html
 define pagetitle Music river
 
 # Similarly, the template used for each item shown. Use "rawdog -T" to
