--- a/_rawdog/announcements/config
+++ b/_rawdog/announcements/config
@@ -263,6 +263,7 @@ feed 3h http://www.econ.iastate.edu/taxonomy/term/3330/all/feed
 feed 3h http://www.econ.iastate.edu/taxonomy/term/19/all/feed
 feed 3h http://www.econ.iastate.edu/taxonomy/term/20/all/feed
 feed 3h http://www.econ.iastate.edu/taxonomy/term/3844/all/feed
+feed 3h http://www.feed43.com/econometric-links-rssified.xml
 
 #feeddefaults
 #	http_proxy http://proxy.example.com:3128/
