--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 permalink: pretty
 markdown: rdiscount
 exclude: ['*.aux', '*.bbl', '*.blg', '*.log', '*.out', '*.fdb_latexmk',
-	 '*.fls', '674/*.bib', 'CNAME']
+	 '*.fls', '*.dvi', '671/*.bib', '674/*.bib', 'CNAME']
