--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,14 @@
 permalink: pretty
 markdown: rdiscount
-exclude: ['*.aux', '*.bbl', '*.blg', '*.log', '*.out', '*.fdb_latexmk',
-	 '*.fls', '*.dvi', '671/*.bib', '674/*.bib', 'CNAME', *~]
+exclude: ['*~',
+          '*.aux',
+          '*.bbl',
+          '*.blg',
+          '*.dvi',
+          '*.fdb_latexmk',
+          '*.fls',
+          '*.log',
+          '*.out',
+          '671/*.bib',
+          '674/*.bib',
+          'CNAME']
