Add shell script to upload website

--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,5 @@ exclude: ['*~',
           '*.out',
           '671/*.bib',
           '674/*.bib',
-          'CNAME']
+          'CNAME',
+          'econupload.sh']
