--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "Pseudotrue news"
+name: "Gray Calhoun's academic homepage"
 description: "Updates from Gray Calhoun's homepage"
 permalink: /:categories/:title
 markdown: rdiscount
@@ -16,5 +16,5 @@ exclude: ['*~',
           '674/*.bib',
           'CNAME',
           'econupload.sh']
-url: ''
-main: 'http://pseudotrue.com'
+url: 'http://gray.clhn.org'
+main: 'http://gray.clhn.org'
